--- a/client/views/main/main.html
+++ b/client/views/main/main.html
@@ -47,32 +47,7 @@
 		<div class="container">
 			<div class="row list-group list-unstyled events-list">
       {{#each events}}
-				<div class="col-sm-12 list-group-item timeline-event">
-					<h4 class="list-group-item-heading">
-						<div class="row">
-		  					<span class="col-sm-1 foto">
-		  						<img src="images/{{linkong}}.png" alt="{{nome}}" class="img-circle img-responsive">
-		  					</span>
-		  					<span class="col-sm-11 text-left nome">
-		  						{{ong}}
-		  						<br>
-		  						<small>
-		  							Adicionou {{type}} {{fromNow createDate}}
-		  						</small>
-		  					</span>
-		  				</div>
-					</h4>
-					<div class="list-group-item-text">
-						<div class="row">
-							<div class="col-sm-11 col-sm-offset-1">
-								<h3>{{title}}</h3>
-							</div>
-							<div class="col-sm-10 col-sm-offset-1  text-center">
-								{{description}}
-							</div>
-						</div>
-					</div>
-				</div>
+				{{>insideMain}}
       {{/each}}
 			</div>
 		</div>
@@ -83,3 +58,32 @@
   </section>
 </template>
 
+
+<template name="insideMain">
+  <div class="col-sm-12 list-group-item timeline-event">
+    <h4 class="list-group-item-heading">
+      <div class="row">
+          <span class="col-sm-1 foto">
+            <img src="images/{{linkong}}.png" alt="{{nome}}" class="img-circle img-responsive">
+          </span>
+          <span class="col-sm-11 text-left nome">
+            {{ong}}
+            <br>
+            <small>
+              Adicionou {{type}} {{fromNow createDate}}
+            </small>
+          </span>
+        </div>
+    </h4>
+    <div class="list-group-item-text">
+      <div class="row">
+        <div class="col-sm-11 col-sm-offset-1">
+          <h3>{{title}}</h3>
+        </div>
+        <div class="col-sm-10 col-sm-offset-1  text-center">
+          {{description}}
+        </div>
+      </div>
+    </div>
+  </div>
+</template>
