--- a/client/css/css2.css
+++ b/client/css/css2.css
@@ -1027,3 +1027,23 @@ h3.profile{
 a.thumbnail{
 	color:black;
 }
+
+.btn.btn-primary{
+	background-color:#14C659;
+	border: 1px solid #3EFABC;
+	text-shadow: 2px 2px 2px rgba(0,0,0,0.2);
+	-webkit-transition: 0.3s all ease;
+	-moz-transition: 0.3s all ease;
+	-ms-transition: 0.3s all ease;
+	-o-transition: 0.3s all ease;
+	transition: 0.3s all ease;
+}
+
+.btn.btn-primary:hover{
+	background-color: #437A68;
+}
+
+.btn-slim{
+	padding-top:3px;
+	padding-bottom:3px;
+}
