--- a/client/css/css2.css
+++ b/client/css/css2.css
@@ -909,6 +909,7 @@ section.profile{
   height:100%;
   border-right: 1px solid #3EFABC;
   border-bottom: 1px solid #3EFABC;
+  position:fixed;
 }
 
 .profile-picture{
@@ -959,8 +960,12 @@ h3.profile{
   display:block;
   height:100%;
   border: none;
-  border-top:1px solid #14C659;
-  border-bottom:1px solid #14C659;
+  border-top:1px solid #1E7A5C;
+  border-bottom:1px solid #1E7A5C;
+}
+
+hr{
+	border-color:#1E7A5C;
 }
 
 .org:hover{
@@ -969,7 +974,6 @@ h3.profile{
 
 .timeline{
   height:100%;
-  width: 80%;
   margin:none;
 }
 
