--- a/client/views/main/main.html
+++ b/client/views/main/main.html
@@ -43,7 +43,7 @@
   		</div>
 	   </div>
     {{/each}}
-	<div class="col-sm-10 timeline margin-nav">
+	<div class="col-sm-10 col-sm-offset-2 timeline margin-nav">
 		<ul class="cbp_tmtimeline">
 	    <li>
 	        <time class="cbp_tmtime" datetime="2013-04-10 18:30"><span>4/10/13</span> <span>18:30</span></time>
@@ -60,6 +60,9 @@
 	            </p>
 	            <p>
 	            	Data de publicação:
+	            </p>
+	            <p>
+	            	<button class="btn btn-primary">Ser Gente Boa!</button>
 	            </p>
 	        </div>
 	    </li>
