--- a/client/views/main/main.html
+++ b/client/views/main/main.html
@@ -28,7 +28,7 @@
   			</div>
   			<div class="col-sm-12 text-center">
   				<hr>
-          <h3><small>Créditos do bem:</small> 0</h3>
+          <h3><small>Créditos do bem:</small>{{number}}</h3>
   				<h4 class="profile">ONGs que eu curto</h4>
   				<br>
   				<div class="row ong">
@@ -44,70 +44,37 @@
 	   </div>
     {{/each}}
 	<div class="col-sm-10 col-sm-offset-2 timeline margin-nav">
+    {{#each events}}
 		<ul class="cbp_tmtimeline">
 	    <li>
-	        <time class="cbp_tmtime" datetime="2013-04-10 18:30"><span>4/10/13</span> <span>18:30</span></time>
-	        <div class="cbp_tmicon">	<img src="images/ong.png" alt="{{nome}}" class="img-responsive img-circle"></div>
+	        <time class="cbp_tmtime" datetime="2013-04-10 18:30"><span>{{date}}</span> <span>{{time}}</span></time>
+	        <div class="cbp_tmicon">	<img src="images/{{linkong}}.png" alt="" class="img-responsive img-circle"></div>
 	        <div class="cbp_tmlabel">
-	            <h3>Greenpeace <small>criou um evento</small>
+	            <h3>{{ong}} <small>{{fromNow createDate}}</small>
 	            <br>
 	            </h3>
 	            <h2>
-	            	Ajuda aos camarões do mar
+	            	{{title}}
 	            </h2>
 	            <p>
-	            	Onde:
+	            	{{local}}
 	            </p>
 	            <p>
-	            	Data de publicação:
+	            	{{date}}
 	            </p>
 	            <p>
-	            	<button class="btn btn-primary">Ser Gente Boa!</button>
-	            </p>
-	        </div>
-	    </li>
-    </ul>
-    <ul class="cbp_tmtimeline">
-	    <li>
-	        <time class="cbp_tmtime" datetime="2013-04-10 18:30"><span>4/10/13</span> <span>18:30</span></time>
-	        <div class="cbp_tmicon">	<img src="images/ong.png" alt="{{nome}}" class="img-responsive img-circle"></div>
-	        <div class="cbp_tmlabel">
-	            <h3>Greenpeace <small>criou um evento</small>
-	            <br>
-	            </h3>
-	            <h2>
-	            	Ajuda aos camarões do mar
-	            </h2>
-	            <p>
-	            	Onde:
-	            </p>
-	            <p>
-	            	Data de publicação:
-	            </p>
-	        </div>
-	    </li>
-    </ul>
-    <ul class="cbp_tmtimeline">
-	    <li>
-	        <time class="cbp_tmtime" datetime="2013-04-10 18:30"><span>4/10/13</span> <span>18:30</span></time>
-	        <div class="cbp_tmicon">	<img src="images/ong.png" alt="{{nome}}" class="img-responsive img-circle"></div>
-	        <div class="cbp_tmlabel">
-	            <h3>Greenpeace <small>criou um evento</small>
-	            <br>
-	            </h3>
-	            <h2>
-	            	Ajuda aos camarões do mar
-	            </h2>
-	            <p>
-	            	Onde:
-	            </p>
-	            <p>
-	            	Data de publicação:
-	            </p>
-	        </div>
-	    </li>
-    </ul>
+                {{#if number value='1'}}
+                <button class="btn btn-primary">Yeah sou gente boa!!</button>
+                {{else}}
+                <button class="btn btn-primary">Ser Gente Boa!</button>
+                {{/if}}
 
+	            </p>
+	        </div>
+	    </li>
+
+    </ul>
+    {{/each}}
 	</div>
   </section>
 </template>
